# Gridify

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  ENHANCEMENTS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  gridify_command.txt  index.html  metadata.json  package-lock.json  package.json  promptfooconfig.yaml  requirements.txt  server.ts  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
backend/: .env.database  .env.example  Dockerfile  README.md  celery_app.py  docker-compose.yml  main.py  requirements.txt  s3_service.py  temporal_app.py
backend/app/: __init__.py  config.py
backend/config/: database.py
backend/data/: gridify.duckdb
backend/database/: init.sql  schema.sql
backend/guardrails/: README.md  config.yml  rails.co
backend/models/: database.py
backend/schemas/: database.py
backend/tests/: __init__.py  test_agent_service.py  test_arrow_service.py  test_cache.py  test_cache_validated.py  test_gemini.py  test_guardrail_middleware.py  test_guardrails.py  test_layout_repository.py  test_llm_service.py  test_olap.py  test_schemas.py  (+2 more)
docs/: dev-setup.md  llm-and-model.md  next-steps.md
examples/: frontend_chart_examples.md  seed_db.py  train_and_save_model.py
frontend/: package-scripts.md
k8s/: deployment.yaml
llm/: ollama_client.py
models/: __init__.py  predict.py  train_model.py
monitoring/: alerts.yml  prometheus.yml
services/analytics-engine/: Cargo.toml
src/: App.tsx  index.css  types.ts
terraform/: main.tf  variables.tf
(+73 files in other folders)
